--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-gcp-iap-ssh",
   "displayName": "GCP IAP SSH Config",
-  "description": "Configure GCP instances for Remote SSH access through IAP",
+  "description": "Add SSH config for accessing GCP instances using Remote SSH extension through IAP",
   "version": "0.1.0",
   "repository": {
     "type": "git",
@@ -45,7 +45,7 @@
       "activitybar": [
         {
           "id": "gcp-instance-explorer",
-          "title": "GCP Instance",
+          "title": "GCP IAP SSH config",
           "icon": "resources/cloud.svg"
         }
       ]
