--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Package extension
-        run: npm run package
+        run: npm run vsce
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
