--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,8 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Package extension
-        run: npm run vsce
+      - name: Package and Publish Extension
+        run: |
+          npm run vsce
+          npx vsce publish -p ${{ secrets.VSCE_PAT }}
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
