--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "GCP IAP SSH Config",
   "description": "Add SSH config for accessing GCP instances using Remote SSH extension through IAP",
   "version": "0.1.0",
+  "publisher": "BitcloudSolutions",
   "repository": {
     "type": "git",
     "url": "https://github.com/krisztiansala/gcp-iap-ssh-config-vscode.git"
